samples/_failures_safe/1761205250_dbdf99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c29409a.c: In function ‘main’:
./samples/SAFE/__tmp_5c29409a.c:199:47: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  199 |     int token_count = tokenize(input, tokens, MAX_TOK
      |                                               ^~~~~~~
      |                                               MAX_TOKENS
./samples/SAFE/__tmp_5c29409a.c:199:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5c29409a.c:199:54: error: expected ‘)’ at end of input
  199 |     int token_count = tokenize(input, tokens, MAX_TOK
      |                               ~                      ^
      |                                                      )
./samples/SAFE/__tmp_5c29409a.c:199:5: error: expected declaration or statement at end of input
  199 |     int token_count = tokenize(input, tokens, MAX_TOK
      |     ^~~
